--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,8 +17,8 @@ spring:
     driver-class-name: org.postgresql.Driver
     url: jdbc:postgresql://localhost:5432/wordik
     validationQuery: SELECT 1
-    username: postgres
-    password:
+    username: wordik
+    password: wordik
   jpa:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     properties:
